finish pom implement